--- a/01/main.tex
+++ b/01/main.tex
@@ -64,7 +64,7 @@ Chapter \CHAPTER: Probability}
   \begin{itemize}
     \item \link{https://jeswheel.github.io/4450\_f25/Introduction.pdf}{About Me}
     \item Course Website: \link{https://jeswheel.github.io/4450\_f25/}{https://jeswheel.github.io/4450\_f25/}. 
-    \item Canvas: Canvas will be used to submit assignments, view grades, and for course announcments.
+    \item Canvas: Canvas will be used to submit assignments, view grades, and for course announcements.
     \item \link{https://jeswheel.github.io/4450\_f25/syllabus.pdf}{Course Syllabus}
   \end{itemize}
 \end{frame}
