--- a/04/main.tex
+++ b/04/main.tex
@@ -344,16 +344,121 @@ Chapter \CHAPTER: Expected Values}
     $$
     P(X \geq a) \leq E(X) / a.
     $$
-  
   \end{itemize}
+
+  \framebreak
+
+  \begin{exampleblock}{Markov's Inequality in Action}
+    suppose that an individual is taken randomly from a population that has an average salary of \$50,000. If we assume that salary from the population is approximately independently and identically distributed, we can provide an upper-bound for the probability that the individual is wealthy.
+    
+    Let $X_i$ be the salary of individual $i$, randomly drawn from said population. Even though all we know is the average salary, Markov's inequality tells use that:
+    $$
+    P(X \geq 200,000) \leq \frac{50,000}{200,000} = \frac{1}{4}. 
+    $$
+  \end{exampleblock}
+
+  \framebreak
+
+  \begin{itemize}
+    \item Returning to expectations of functions of random variables, we can extend to the multi-variate case
+  \end{itemize}
+  
+  \begin{block}{Theorem 4.2: functions of multiple variables}
+    Suppose that $X_1, \ldots, X_n$ are jointly distributed RVs and $Y = g(X_1, \ldots, X_n)$. Then
+    \begin{itemize}
+      \item IF $X_i$ are discrete with pmf $p(x_1, \ldots, x_n)$, then
+      $$
+      E(Y) = \sum_{x_1, \ldots, x_n} g(x_1, \ldots, x_n)p(x_1, \ldots, x_n).
+      $$
+      \item If $X_i$ are continuous with pdf $f(x_1, \ldots, x_n)$, then
+      $$
+      E(Y) = \int_{\mathcal{X}_1, \ldots, \mathcal{X}_n}g(x_1, \ldots, x_n)f(x_1, \ldots, x_n)\, dx_1\,\ldots,dx_n.
+      $$
+    \end{itemize}
+    In both cases, we need the sum (or integral) of $|g|$ to converge.
+  \end{block}
+
+\framebreak
+
+\begin{itemize}
+  \item The proof for the discrete case of Theorem 4.2 follows directly that of Theorem 4.1
+  \item An immediate consequence of Theorem~4.2 is the following
+\end{itemize}
+
+\begin{block}{Corollary~4.2.1}
+  If $X$ and $Y$ are independent random variables, and $g$ and $h$ are fixed functions, then
+  $$
+  E\big[g(X)h(Y)\big] = \Big(E\big[g(X)\big]E\big[h(Y)\big]\Big),
+  $$
+  provided that the expectations on the right-hand side exist.
+\end{block}
+
+\begin{exampleblock}{Example: Breaking sticks}
+  A stick of unit-length is broken randomly (uniformly) in two places. What is the average length of the middle piece?
+  
+  We will interpret this problem to mean that the locations of the two break-points are independent uniform random variables, $U_1$ and $U_2$, and we need to computing $E|U_1 - U_2|$.
+  
+\mode<article>{
+  \emph{Solution:} Theorem $4.2$ implies that we do not need to find the density function of $U_1 - U_2$. Instead, we just need to integrate $|u_1 - u_2|$ against the joint density: $f(u_1, u_2) = 1$, with $0 \leq u_1, u_2 \leq 1$. Thus
+  \begin{align*}
+    E|U_1 - U_2| &= \int_{0}^1 \int_{0}^1 |u_1 - u_2| \, du_1\,du_2
+  \end{align*}
+  Splitting this integral into two regions, one where $u_1 \geq u_2$ and one where $u_2 > u_1$, we get
+    \begin{align*}
+    E|U_1 - U_2| &= \int_{0}^1 \int_{0}^{u_1} (u_1 - u_2) \, du_2\,du_1 + \int_{0}^1 \int_{u_1}^{1} (u_2 - u_1) \, du_2\,du_1 \\
+    &= \frac{1}{3}
+  \end{align*}
+  Logically, this result makes sense as it suggests that if we have two break points (three pieces) and the break points are uniform and random, the middle piece, on average, will be $1/3$ of the length of the original stick. 
+}
+\end{exampleblock}
+
+\mode<presentation>{
+  \emph{Solution:}
+}
 
 \end{frame}
 
-\begin{frame}{Markov's Inequality}
+\begin{frame}[allowframebreaks]{Linear Combinations of Random Variables}
 
 \begin{itemize}
-  \item There are a 
+  \item A useful property of expectation is that it is a \alert{linear operator}. 
+  % \item Specifically, we say that an operator $A$ that maps vector space $U$ to $V$, $A:U\rightarrow V$ is \emph{linear} if 
+  % $$
+  % A(\alpha x + \beta y) = \alpha A x + \beta A y, \quad x, y \in U, \quad \alpha, \beta \in \R.
+  % $$
 \end{itemize}
+
+\begin{block}{Theorem 4.3: Linear combinations}
+  If $X_1, \ldots, X_n$ are jointly distributed random variables with expectations $E(X_i)$, repsectively, and $Y = a + \sum_{i = 1}^n b_i X_i$, then,
+  $$
+  E(Y) = a + \sum_{i = 1}^n b_i E(X_i).
+  $$
+\end{block}
+
+\framebreak
+
+\emph{Proof.} \mode<article>{We will show this for the continuous case with $n = 2$. The proof for the discrete case is similar, and this argument is readily extended to the case that $n > 2$. First, we will argue that the expectation is well-defined. By definition,
+$$
+E|Y| = \int |a + b_1 x_1 + b_2 x_2| f(x_1, x_2)\, dx_1 \, dx_2
+$$
+and by the triangle inequality $|a + b_1 x_1 + b_2 x_2| \leq |a| + |b_1||x_1| + |b_2||x_2|$, and the fact that $E[X_i]$ exists (which implies that $E|X_i| < \infty$), we see that $E|Y| < \infty$. Now we can calculate the expected value. By Theorem 4.2,
+\begin{align*}
+  E(Y) &= \int (a + b_1 x_1 + b_2 x_2)f(x_1, x_2)\, dx_1\,dx_2 \\
+       &= a \int f(x_1, x_2)\, dx_1\,dx_2 + b_1 \int x_1 f(x_1, x_2)\, dx_1\,dx_2 \\
+       & \quad + b_2 \int x_2 f(x_1, x_2)\, dx_1\,dx_2 \\
+\end{align*}
+Note that the first integral is equal to $1$, because it's the integral of a joint pdf over the support. We'll focus now on the second integral, which is evaluated in a similar way as the third integral due to symmetry.
+\begin{align*}
+  b_1 \int x_1 f(x_1, x_2)\, dx_1\,dx_2 &= b_1 \int x_1 \left(\int f(x_1, x_2)\, dx_2\right)dx_1 \\
+  &= b_1 \int x_1 f(x_1) \, dx_1\\
+  &= b_1 E[X_1].
+\end{align*}
+Thus, applying the same idea to the third integral, we get
+$$
+E(Y) = a + b_1E(X_1) + b_2E(X_2).
+$$
+}
+
 \end{frame}
 
 \newcommand\acknowledgments{
