Fixed dates, link to homework rubric

--- a/syllabus.tex
+++ b/syllabus.tex
@@ -304,7 +304,7 @@ This table will be updated on the course website as needed.
 
 \begin{longtable}{|c|l|c|}
 \hline
-\textbf{Week} & \textbf{Dates (MWF)} & \textbf{Textbook Chapters} \\
+\textbf{Week} & \textbf{Dates (T Th)} & \textbf{Textbook Chapters} \\
 \hline
 \endhead
 
@@ -359,7 +359,7 @@ The order of preferred sources are:
 \end{itemize}
 When looking for outside sources, please try your best to not search directly for a solution.
 To obtain full points for ``academic integrity", each homework assignment must include a statement at the start of the assignment indicating which sources they used, how long they worked on the problem before looking for alternative sources, and what they learned from the source they found.
-More details regarding the 2 academic integrity points can be found in TODO
+More details regarding the 1 academic integrity point can be found at \url{https://jeswheel.github.io/4450\_f25/rubric\_homework.html} 
 
 
 \subsection{Quizes}
